sbocheck.1: Correct log file locations.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -38,13 +38,13 @@ sbotools.conf(5)\fR\
 .P
 The three output categories are logged separately to
 .I
-/etc/sbocheck.log\fR\
+/var/log/sbocheck.log\fR\
 \&,
 .I
-/etc/sbocheck-bumps.log
+/var/log/sbocheck-bumps.log
 and
 .I
-/etc/sbocheck-out-of-tree.log\fR\
+/var/log/sbocheck-out-of-tree.log\fR\
 \&. The out-of-tree and build number increment checks are disabled
 when
 .B
