sbosnap: Replace with a compatibility symlink.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -2,7 +2,9 @@ sbotools
 * Post-Release
   * sboconfig: Allow versions "X.Y+" and "current"; more informative error messages
   * Exit with invalid sbotools.conf parameters
-  * sbocheck, sbosnap: Before fetch, offer to exit if the git branch does not exist
+  * sbocheck: Before fetch, offer to exit if the git branch does not exist
+  * Repo.pm: Check for local repo similarity to SBo rather than relying on SLACKBUILDS.TXT
+  * sbosnap: Redundant; replace with a compatibility symlink
 
 * 3.2.1 - 2024-12-20
   * Bugfix: sboinstall, sboupgrade GPG check for custom repositories (removed unneeded conditional)
