--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -78,9 +78,6 @@ branches to
 branch_name
 when using
 .B
-sbosnap(1)
-or
-.B
 sbocheck(1)
 with an upstream git repository.
 .RE
@@ -184,9 +181,6 @@ TRUE\fR\
 gpg
 to verify the contents of the local repository when running
 .B
-sbosnap(1)\fR\
-\&,
-.B
 sbocheck(1)\fR\
 \&,
 .B
@@ -247,10 +241,7 @@ slackbuilds.org
 tree will be stored. The default setting is
 .I
 /usr/sbo\fR\
-\&. The tree must be re-downloaded with
-.B
-sbosnap fetch
-if the
+\&. The tree must be re-downloaded if the
 .B
 SBO_HOME
 setting changes.
@@ -377,7 +368,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
