--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -83,9 +83,6 @@ TRUE\fR\
 gpg
 to verify the contents of the local repository when running
 .B
-sbosnap(1)\fR\
-\&,
-.B
 sbocheck(1)\fR\
 \&,
 .B
@@ -150,9 +147,6 @@ branches to
 branch_name
 when using
 .B
-sbosnap(1)
-or
-.B
 sbocheck(1)
 with an upstream git repository.
 .RE
@@ -195,7 +189,7 @@ tree will be stored. The default setting is
 /usr/sbo\fR\
 \&. The tree must be re-downloaded with
 .B
-sbosnap fetch
+sbocheck(1)
 if the
 .B
 SBO_HOME
@@ -292,7 +286,7 @@ TRUE\fR\
 .RE
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
