--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -16,13 +16,10 @@ sbocheck [-g|-n]
 .P
 .B
 sbocheck
-first updates a previously-fetched copy of the
+first updates or fetches a copy of the
 .B
 slackbuilds.org
-tree (see
-.B
-sbosnap(1)\fR\
-\&), checks for available upgrades, and reports what it finds.
+tree, checks for available upgrades, and reports what it finds.
 SlackBuilds with differing build numbers are reported separately,
 as are any SlackBuilds marked
 .I
@@ -146,7 +143,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
