--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -92,6 +92,17 @@ and
 verifies the repo in-place without fetching.
 Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .P
+Please note that
+.B
+sbosnap\fR\
+\&, which was removed as an independent script in
+.B
+sbotools-3.3\fR\
+\&, is a compatibility symlink to
+.B
+sbocheck\fR\
+\&.
+.P
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
