Repo.pm: slackbuilds_or_fetch gives a more accurate message.

--- a/man3/SBO::Lib::Repo.3
+++ b/man3/SBO::Lib::Repo.3
@@ -188,7 +188,7 @@ at the end of the subroutine.
 .PP
 \&\f(CWslackbuilds_or_fetch()\fR is called from \f(CWsbocheck(1)\fR, \f(CWsbofind(1)\fR, \f(CWsboinstall(1)\fR
 and \f(CWsboupdate(1)\fR. It checks for the file \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR in
-\&\f(CW$repo_path\fR. If not, it offers to fetch the tree.
+\&\f(CW$repo_path\fR. If not, it offers to check the local repository and fetch the tree.
 .SS update_tree
 .IX Subsection "update_tree"
 .Vb 1
