--- a/man3/SBO::Lib::Repo.3
+++ b/man3/SBO::Lib::Repo.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Repo 3"
-.TH SBO::Lib::Repo 3 "Prickle-Prickle, The Aftermath 67, 3190 YOLD" "" "sbotools 3.2.1"
+.TH SBO::Lib::Repo 3 "Setting Orange, The Aftermath 68, 3190 YOLD" "" "sbotools 3.2.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -65,42 +65,36 @@ SBO::Lib::Repo \- Routines for downloading and updating the SBo repository.
 .SH SYNOPSIS
 .IX Header "SYNOPSIS"
 .Vb 1
-\&  use SBO::Lib::Repo qw/ fetch_tree /;
+\&  use SBO::Lib::Repo qw/ update_tree /;
 \&
-\&  fetch_tree();
+\&  update_tree();
 .Ve
 .SH VARIABLES
 .IX Header "VARIABLES"
+The location of all variables depends on the \f(CW\*(C`SBO_HOME\*(C'\fR config setting.
 .ie n .SS $distfiles
 .el .SS \f(CW$distfiles\fP
 .IX Subsection "$distfiles"
 \&\f(CW$distfiles\fR defaults to \f(CW\*(C`/usr/sbo/distfiles\*(C'\fR, and it is where all
 downloaded sources are kept.
-.PP
-The location depends on the \f(CW\*(C`SBO_HOME\*(C'\fR config setting.
 .ie n .SS $gpg_log
 .el .SS \f(CW$gpg_log\fP
 .IX Subsection "$gpg_log"
 \&\f(CW$gpg_log\fR defaults to \f(CW\*(C`/usr/sbo/gpg.log\*(C'\fR, and it is where the output
 of the most recent \f(CW\*(C`gnupg\*(C'\fR verification is kept.
-.PP
-The location depends on the \f(CW\*(C`SBO_HOME\*(C'\fR config setting.
 .ie n .SS $repo_path
 .el .SS \f(CW$repo_path\fP
 .IX Subsection "$repo_path"
 \&\f(CW$repo_path\fR defaults to \f(CW\*(C`/usr/sbo/repo\*(C'\fR, and it is where the
 SlackBuilds.org tree is kept.
-.PP
-The location depends on the \f(CW\*(C`SBO_HOME\*(C'\fR config setting.
 .ie n .SS $slackbuilds_txt
 .el .SS \f(CW$slackbuilds_txt\fP
 .IX Subsection "$slackbuilds_txt"
 \&\f(CW$slackbuilds_txt\fR defaults to \f(CW\*(C`/usr/sbo/repo/SLACKBUILDS.TXT\*(C'\fR. It is
-included in the official rsync repos, but not the git mirrors. Currently,
-this file is used to indicate that \f(CW$repo_path\fR is a local mirror of the
-upstream repo. This is likely to change in an upcoming version.
-.PP
-The location depends on the \f(CW\*(C`SBO_HOME\*(C'\fR config setting.
+included in the official rsync repos, but not the git mirrors.
+If this file exists, is non-empty and \f(CW$repo_path\fR has an identical top-level
+directory structure to the SlackBuilds.org tree, pulling into an existent
+\&\f(CW$repo_path\fR proceeds without prompting.
 .SH SUBROUTINES
 .IX Header "SUBROUTINES"
 .SS check_git_remote
@@ -118,45 +112,24 @@ a true value, and a false value otherwise.
 \&  my $bool = check_repo();
 .Ve
 .PP
-\&\f(CWcheck_repo()\fR is used when SLACKBUILDS.txt cannot be found.
+\&\f(CWcheck_repo()\fR is used when the tree is to be fetched or updated.
 It checks if the path in \f(CW$repo_path\fR exists and is an empty
 directory, and returns a true value if so.
 .PP
-If \f(CW$repo_path\fR exists and is non-empty, it may be malformed. The user
-is prompted to regenerate SLACKBUILDS.TXT to proceed. If the directory
-\&\f(CW\*(C`$repo_path/.git\*(C'\fR exists, all contents of the directory would be deleted
-in case of an rsync mirror. Otherwise, the contents would be deleted
-regardless of fetch method.
+If \f(CW$repo_path\fR exists and is non-empty, it is checked for
+its resemblance to a complete SBo repository. The user receives
+warning prompts varying in severity depending on whether
+top-level directories not belonging to the repository exist, repository
+top-level directories are missing or, in the worst case, both. Warnings are less
+severe for \f(CW\*(C`git fetch\*(C'\fR, which will not delete 'extra' files and
+directories.
+.PP
+If \f(CW$repo_path\fR contains all expected category directories and
+no unexpected directories, \f(CWcheck_repo()\fR returns a true value
+if \f(CW$slackbuilds_txt\fR is non-empty, and prompts the user if not.
 .PP
 If \f(CW$repo_path\fR does not exist, creation will be attempted, returning a true
 value on success. Creation failure results in a usage error.
-.PP
-\&\fBNote\fR: This is a prime candidate for changes in an upcoming version.
-In principle, it would be better to check that the contents of \f(CW$repo_path\fR
-are sufficiently similar to an SBo mirror to continue safely. (KEC)
-.SS chk_slackbuilds_txt
-.IX Subsection "chk_slackbuilds_txt"
-.Vb 1
-\&  my $bool = chk_slackbuilds_txt();
-.Ve
-.PP
-\&\f(CWchk_slackbuilds_txt()\fR checks if the file \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR exists in the
-correct location, and returns a true value if it does, and a false value
-otherwise.
-.PP
-\&\fBNote\fR: It is possible that some code related to repository detection
-independent of \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR will be placed here. (KEC)
-.SS fetch_tree
-.IX Subsection "fetch_tree"
-.Vb 1
-\&  fetch_tree();
-.Ve
-.PP
-\&\f(CWfetch_tree()\fR checks that \f(CW$repo_path\fR exists and is empty, and then fetches
-the SlackBuilds.org repository.
-.PP
-If the \f(CW$repo_path\fR exists and is non-empty, the user will see a series of prompts
-from \f(CWcheck_repo()\fR before the fetch proceeds.
 .SS generate_slackbuilds_txt
 .IX Subsection "generate_slackbuilds_txt"
 .Vb 1
@@ -213,19 +186,20 @@ at the end of the subroutine.
 \&  slackbuilds_or_fetch();
 .Ve
 .PP
-\&\f(CWslackbuilds_or_fetch()\fR checks for the file \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR in
-\&\f(CW$repo_path\fR. If not, it offers to fetch the tree.
-.PP
-\&\fBNote\fR: Changes are likely once \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR is no longer needed
-for checking that a local copy of the repository exists. (KEC)
+\&\f(CWslackbuilds_or_fetch()\fR is called from \f(CWsbocheck(1)\fR, \f(CWsbofind(1)\fR, \f(CWsboinstall(1)\fR
+and \f(CWsboupdate(1)\fR. It checks for the file \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR in
+\&\f(CW$repo_path\fR. If not, it offers to check the local repository and fetch the tree.
 .SS update_tree
 .IX Subsection "update_tree"
 .Vb 1
 \&  update_tree();
 .Ve
 .PP
-\&\f(CWupdate_tree()\fR checks for \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR in \f(CW$repo_path\fR. If not, it runs
-\&\f(CWfetch_tree()\fR. Otherwise, it updates the SlackBuilds.org tree.
+\&\f(CWupdate_tree()\fR checks for \f(CW\*(C`SLACKBUILDS.TXT\*(C'\fR in \f(CW$repo_path\fR to determine an
+appropriate onscreen message. It then updates the SlackBuilds.org tree.
+.PP
+The local repository is checked for existence and similarity to the SBo repository
+before any update proceeds.
 .SS verify_git_commit
 .IX Subsection "verify_git_commit"
 .Vb 1
