More documentation for sboconfig --reset

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -24,6 +24,14 @@ If an invalid configuration is detected (or requested with
 sboconfig(1)\fR\
 ), the script will exit with a diagnostic message.
 .P
+To quickly restore all default settings, run
+.RS
+
+sboconfig --reset
+
+
+.RE
+.P
 The current configuration keys are as follows:
 .P
 .B
