--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -156,8 +156,8 @@ other SlackBuilds requiring them.
 .Ve
 .PP
 \&\f(CWparse_info()\fR parses the contents of an info file from \f(CW$str\fR and returns
-a key-value list of all values present. It attempts to repair missing quotation
-marks.
+a key-value list of all values present. It attempts to repair blank lines and
+missing quotation marks and backslashes.
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
