--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -1,4 +1,4 @@
-.TH sboremove 1 "Prickle-Prickle, The Aftermath 62, 3190 YOLD" "sbotools 3.2.1" sbotools
+.TH sboremove 1 "Setting Orange, The Aftermath 73, 3190 YOLD" "sbotools 3.3" sbotools
 .SH NAME
 .P
 .B
