--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Boomtime, The Aftermath 70, 3190 YOLD" "" "sbotools 3.2.1"
+.TH SBO::Lib::Util 3 "Setting Orange, The Aftermath 73, 3190 YOLD" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
