--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -1,4 +1,4 @@
-.TH sbotools.hints 5 "Prickle-Prickle, The Aftermath 62, 3190 YOLD" "sbotools 3.2.1" sbotools
+.TH sbotools.hints 5 "Setting Orange, The Aftermath 73, 3190 YOLD" "sbotools 3.3" sbotools
 .SH NAME
 .P
 .B
