--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Setting Orange, The Aftermath 73, 3190 YOLD" "" "sbotools 3.3"
+.TH SBO::Lib::Info 3 "Sweetmorn, Chaos 1, 3191 YOLD" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -179,4 +179,4 @@ The sbotools are licensed under the MIT License.
 .PP
 Copyright (C) 2012\-2017, Jacob Pipkin, Luke Williams, Andreas Guldstrand.
 .PP
-Copyright (C) 2024, K. Eugene Carlson.
+Copyright (C) 2024\-2025, K. Eugene Carlson.
