sboconfig: Add an interactive menu.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,7 @@
 sbotools
+* Post-Release
+  * sboconfig: Run without flags or options to use an interactive menu
+
 * 3.3 - 2024-12-31
   * sboconfig: Allow versions "X.Y+" and "current"; more informative error messages
   * Exit with invalid sbotools.conf parameters
