--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -27,8 +27,15 @@ sboconfig
 is a front-end for managing
 .B
 sbotools
-configuration
-options. The
+configuration options. Using
+.B
+sboconfig
+without any flags will start an interactive menu
+to specify settings; all options are accompanied by
+an explanatory message, and no changes are applied
+without user confirmation.
+.P
+The
 .B
 sbotools.conf(5)
 file can also be manually edited; any fields not
