--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -168,6 +168,13 @@ is set to
 .B
 TRUE\fR\
 \&.
+.P
+Using
+.B
+sboconfig(1)
+without flags enters an interactive settings menu. Each option is explained
+and no changes are made without verification. Using flags is faster, but
+new users may find this a helpful resource.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
