Use the name STRICT_UPGRADES

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -362,10 +362,10 @@ TRUE\fR\
 .RE
 .P
 .B
--S|--strict-versions (FALSE|TRUE)
+-S|--strict-upgrades (FALSE|TRUE)
 .RS
 .B
-STRICT_VERSIONS\fR\
+STRICT_UPGRADES\fR\
 \&: If set to
 .B
 TRUE\fR\
