sbohints: WIP; only lists and queries are done.

--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -55,6 +55,11 @@ files and installed reverse dependencies.
 .RE
 .P
 .B
+sbohints(1)
+.RS
+Query and modify the blacklist and optional dependency requests.
+.P
+.B
 sboinstall(1)
 .RS
 Install SlackBuilds with their dependencies. Handle compat32 packages
@@ -183,7 +188,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
