--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -45,7 +45,7 @@ Commented lines are ignored. There should not be whitespace to the left of any
 entry.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
