--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, Chaos 4, 3191 YOLD" "" "sbotools 3.3"
+.TH SBO::Lib::Util 3 "Setting Orange, Chaos 5, 3191 YOLD - Mungday" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -93,8 +93,10 @@ The supported keys are: \f(CW\*(C`NOCLEAN\*(C'\fR, \f(CW\*(C`DISTCLEAN\*(C'\fR, 
 .ie n .SS @listings
 .el .SS \f(CW@listings\fP
 .IX Subsection "@listings"
-An array with blacklisted packages and optional dependency requests read in
-from \f(CW\*(C`/etc/sbotools/sbotools.hints\*(C'\fR. Non-exportable.
+An array with blacklisted scripts and optional dependency requests read in
+from \f(CW\*(C`/etc/sbotools/sbotools.hints\*(C'\fR. Only \f(CWread_hints()\fR should interact
+with \f(CW@listings\fR directly; in other situations, make a copy (see e.g.
+\&\f(CW@on_blacklist()\fR.)
 .SH SUBROUTINES
 .IX Header "SUBROUTINES"
 .SS build_cmp
