Add a couple of things to the man pages.

--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -130,6 +130,24 @@ Show help information.
 .RS
 Show version information.
 .RE
+.SH EXIT CODES
+.P
+.B
+sbohints
+can exit with the following codes:
+.RS
+
+0: all operations were successful.
+.RE
+.RS
+1: a usage error occurred.
+.RE
+.RS
+6:
+.B
+sbohints
+was unable to obtain a required file handle.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
