--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -43,6 +43,10 @@ libcacard spice libiscsi qemu
 .RE
 Commented lines are ignored. There should not be whitespace to the left of any
 entry.
+.P
+.B
+sbohints(1)
+can also be used to interface with this file.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
