--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -102,7 +102,8 @@ and
 .RS
 List the current blacklist and all optional dependency
 requests. If a blacklisted script has optional dependency
-requests, the user is notified.
+requests or is requested as an optional depenedency, the
+user is notified.
 .RE
 .P
 .B
