--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -10,9 +10,9 @@ sbohints [-h | -v]
 .P
 sbohints [-l | --reset]
 .P
-sbohints [-c] [-b | -o | -O] sbo ...
+sbohints [-c] [-b | -o | -O] sbo_name (sbo_name)
 .P
-sbohints [-q] sbo ...
+sbohints [-q] sbo_name (sbo_name)
 .SH DESCRIPTION
 .P
 .B
