--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Setting Orange, Chaos 5, 3191 YOLD - Mungday" "" "sbotools 3.3"
+.TH SBO::Lib::Util 3 "Sweetmorn, Chaos 11, 3191 YOLD" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -286,7 +286,8 @@ There is no useful return value.
 .PP
 \&\f(CWread_hints()\fR reads the contents of /etc/sbotools/sbotools.hints, returning an array
 of optional dependency requests and blacklisted scripts. \f(CWread_hints()\fR is used to
-populate global array \f(CW@listings\fR, and should only be called once.
+populate global array \f(CW@listings\fR, and should only be called at the start and again
+when editing the hints file.
 .SS save_options
 .IX Subsection "save_options"
 .Vb 1
