--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -1,4 +1,4 @@
-.TH sbocheck 1 "Setting Orange, The Aftermath 73, 3190 YOLD" "sbotools 3.3" sbotools
+.TH sbocheck 1 "Prickle-Prickle, Chaos 14, 3191 YOLD" "sbotools 3.4" sbotools
 .SH NAME
 .P
 .B
@@ -97,7 +97,7 @@ Please note that
 sbosnap\fR\
 \&, which was removed as an independent script in
 .B
-sbotools-3.3\fR\
+sbotools-3.4\fR\
 \&, is a compatibility symlink to
 .B
 sbocheck\fR\
