--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -1,4 +1,4 @@
-.TH sboupgrade 1 "Setting Orange, The Aftermath 73, 3190 YOLD" "sbotools 3.3" sbotools
+.TH sboupgrade 1 "Prickle-Prickle, Chaos 14, 3191 YOLD" "sbotools 3.4" sbotools
 .SH NAME
 .P
 .B
