--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -88,7 +88,7 @@ Please note that optional dependencies must be specified in
 sbotools.hints(5)
 to be included. Packages with tags other than
 .I
-_SBo\fR\
+_SBo
 are not included.
 .RE
 .P
@@ -111,7 +111,7 @@ can exit with the following codes:
 0: all operations were succesful.
 .RE
 .RS
-1: a usage error occured (i.e.
+1: a usage error occured (e.g.,
 .B
 sbofind
 ran with nothing to find)
