--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -87,7 +87,7 @@ sbotools.conf\fR\
 sbotools.conf(5)\fR\
 \&.
 .B
-sbotools.hints(5)\fR\
+sbotools.hints(5)
 documents the
 .I
 /etc/sbotools/sbotools.hints
