sbocheck.1: Add exit codes.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -156,6 +156,24 @@ Show help information.
 .RS
 Show version information.
 .RE
+.SH EXIT CODES
+.P
+.B
+sbocheck
+can exit with the following codes:
+.RS
+
+0: all operations were successful.
+.RE
+.RS
+5: failed to download the tree.
+.RE
+.RS
+6: failed to open a required file handle.
+.RE
+.RS
+12: interrupt signal received.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
